--- a/PlaylistGenerator/app/src/main/res/layout/activity_main.xml
+++ b/PlaylistGenerator/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,48 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="#A5D6A7"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="45dp"
+        android:background="#6186AF"
+        android:text="@string/name_with_space"
+        android:textColor="#ffffff"
+        android:padding="5dp"
+        android:textSize="30sp" />
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/greeting_text"
+        android:background="#6186AF"
+        android:textColor="#ffffff"
+        android:padding="5dp"
+        android:textSize="15sp" />
+
+    <Button
+        android:id="@+id/generate_button"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="25dp"
+        android:background="#009D10"
+        android:text="@string/generate"
+        android:textColor="#ffffff" />
+
+    <Button
+        android:id="@+id/view_button"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="25dp"
+        android:background="#125188"
+        android:text="@string/view"
+        android:textColor="#ffffff" />
+
+
+</LinearLayout>
