--- a/PlaylistGenerator/app/src/main/res/layout/activity_view.xml
+++ b/PlaylistGenerator/app/src/main/res/layout/activity_view.xml
@@ -4,7 +4,9 @@
     android:layout_height="match_parent"
     android:background="#A5D6A7"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,10 +18,37 @@
         android:textColor="#ffffff"
         android:padding="5dp"
         android:textSize="30sp" />
+    <EditText
+        android:id="@+id/name_text"
+        android:inputType="text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/name_hint"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/song_text_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="250dp"
+        android:padding="10dp">
     </android.support.v7.widget.RecyclerView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#A5D6A7"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <CheckBox
+            android:id="@+id/public_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/make_public"/>
+        <Button
+            android:id="@+id/save_button"
+            android:text="@string/save_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 
 </LinearLayout>
